@@ -1,31 +1,45 @@
 package io.github.bmarwell.jfmt.commands;
 
+import static java.nio.file.Files.isRegularFile;
+
 import com.github.difflib.DiffUtils;
 import com.github.difflib.patch.Patch;
 import io.github.bmarwell.jfmt.config.ConfigLoader;
 import io.github.bmarwell.jfmt.config.NamedConfig;
 import io.github.bmarwell.jfmt.format.FileProcessingResult;
 import io.github.bmarwell.jfmt.format.FormatterMode;
+import io.github.bmarwell.jfmt.imports.CliNamedImportOrder;
+import io.github.bmarwell.jfmt.imports.ImportOrderConfiguration;
+import io.github.bmarwell.jfmt.imports.ImportOrderLoader;
+import io.github.bmarwell.jfmt.imports.NamedImportOrder;
 import io.github.bmarwell.jfmt.nio.PathUtils;
 import io.github.bmarwell.jfmt.writer.OutputWriter;
 import java.io.IOException;
 import java.io.UncheckedIOException;
+import java.nio.ByteBuffer;
+import java.nio.charset.CharacterCodingException;
+import java.nio.charset.CodingErrorAction;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.Callable;
+import org.eclipse.core.runtime.CoreException;
+import org.eclipse.jdt.core.JavaCore;
 import org.eclipse.jdt.core.ToolFactory;
+import org.eclipse.jdt.core.compiler.IProblem;
+import org.eclipse.jdt.core.dom.AST;
+import org.eclipse.jdt.core.dom.ASTParser;
+import org.eclipse.jdt.core.dom.CompilationUnit;
 import org.eclipse.jdt.core.formatter.CodeFormatter;
 import org.eclipse.jface.text.BadLocationException;
 import org.eclipse.jface.text.Document;
 import org.eclipse.jface.text.IDocument;
-import org.eclipse.text.edits.TextEdit;
 import picocli.CommandLine;
 
 public abstract class AbstractCommand implements Callable<Integer> {
@@ -76,9 +90,10 @@ public abstract class AbstractCommand implements Callable<Integer> {
     FileProcessingResult processFile(CodeFormatter formatter, Path javaFile) {
         getWriter().info("Processing file", javaFile.toString());
 
-        try (var javaSource = Files.newInputStream(javaFile)) {
-            final String sourceCode = new String(javaSource.readAllBytes(), StandardCharsets.UTF_8);
-            final String revisedSourceCode = createRevisedSourceCode(formatter, sourceCode);
+        try {
+            final var javaSourceBytes = Files.readAllBytes(javaFile);
+            final var sourceCode = getEncodedSourceCode(javaSourceBytes);
+            final var revisedSourceCode = createRevisedSourceCode(formatter, javaFile, sourceCode);
 
             final List<String> originalSourceLines = List.of(sourceCode.split("\n"));
             final List<String> revisedSourceLines = List.of(revisedSourceCode.split("\n"));
@@ -94,9 +109,22 @@ public abstract class AbstractCommand implements Callable<Integer> {
             );
         } catch (IOException ioException) {
             throw new UncheckedIOException(ioException);
-        } catch (org.eclipse.jface.text.BadLocationException ble) {
+        } catch (BadLocationException | CoreException ble) {
             getWriter().warn("Error formatting file", javaFile.toString());
             throw new IllegalStateException(ble);
+        }
+    }
+
+    private static String getEncodedSourceCode(byte[] bytes) {
+        try {
+            // Simple UTF-8 validity check
+            return StandardCharsets.UTF_8.newDecoder()
+                .onMalformedInput(CodingErrorAction.REPORT)
+                .decode(ByteBuffer.wrap(bytes))
+                .toString();
+        } catch (CharacterCodingException e) {
+            // Otherwise, assume ISO-8859-1 or CP1252 (safe Latin fallbacks)
+            return new String(bytes, StandardCharsets.ISO_8859_1);
         }
     }
 
@@ -122,26 +150,72 @@ public abstract class AbstractCommand implements Callable<Integer> {
         return ToolFactory.createCodeFormatter(config);
     }
 
-    static String createRevisedSourceCode(CodeFormatter formatter, String sourceCode)
-        throws BadLocationException {
-        final TextEdit edit = formatter.format(
-            CodeFormatter.K_COMPILATION_UNIT,
-            sourceCode,
-            0,
-            sourceCode.length(),
-            0,
-            "\n"
-        );
+    String createRevisedSourceCode(CodeFormatter formatter, Path javaFile, String sourceCode)
+        throws BadLocationException, CoreException {
+        var unixSourceCode = sourceCode.replace("\r\n", "\n");
+        CompilationUnit compilationUnit = getCompilationUnitFrom(unixSourceCode, javaFile);
 
-        Objects.requireNonNull(edit, "Formatting edits must not be null.");
+        if (compilationUnit.getProblems() != null && compilationUnit.getProblems().length > 0) {
+            for (IProblem problem : compilationUnit.getProblems()) {
+                getWriter().warn(javaFile.toString(), problem.toString());
+            }
 
-        final IDocument doc = new Document(sourceCode);
-        edit.apply(doc);
+            throw new IllegalStateException(
+                "CompilationUnit problems: " + Arrays.asList(compilationUnit.getProblems())
+            );
+        }
 
-        return doc.get();
+        // If there are imports, reorder them deterministically, according to style.
+        final IDocument workingDoc = new Document(unixSourceCode);
+
+        ImportOrderProcessor importOrderProcessor = createImportOrderProcessor();
+        importOrderProcessor.rewriteImportsIfAny(compilationUnit, workingDoc);
+
+        // Now format the (possibly) updated document
+        FormatterProcessor formatterProcessor = new FormatterProcessor(formatter);
+        formatterProcessor.formatDocument(workingDoc);
+
+        return workingDoc.get();
+    }
+
+    private ImportOrderProcessor createImportOrderProcessor() {
+        // Resolve import-order tokens from CLI options
+        if (this.globalOptions.importOrderFile != null && isRegularFile(this.globalOptions.importOrderFile)) {
+            var importOrderConfig = new ImportOrderLoader().loadFromFile(this.globalOptions.importOrderFile);
+
+            return new ImportOrderProcessor(importOrderConfig);
+
+        }
+        CliNamedImportOrder cli = this.globalOptions.importOrder;
+        var named = NamedImportOrder.fromCli(cli);
+        ImportOrderConfiguration importOrderTokens = new ImportOrderLoader().loadFromResource(named.getResourcePath());
+
+        return new ImportOrderProcessor(importOrderTokens);
+    }
+
+    private static CompilationUnit getCompilationUnitFrom(String sourceCode, Path javaFile) {
+        // extract package from file
+        ASTParser parser = ASTParser.newParser(AST.getJLSLatest());
+        parser.setSource(sourceCode.toCharArray());
+        parser.setUnitName(javaFile.getFileName().toString());
+        parser.setKind(ASTParser.K_COMPILATION_UNIT);
+
+        // Configure compiler options
+        Map<String, String> options = JavaCore.getOptions();
+        options.put(JavaCore.COMPILER_SOURCE, String.valueOf(AST.getJLSLatest()));
+        options.put(JavaCore.COMPILER_COMPLIANCE, String.valueOf(AST.getJLSLatest()));
+        options.put(JavaCore.COMPILER_CODEGEN_TARGET_PLATFORM, String.valueOf(AST.getJLSLatest()));
+        parser.setCompilerOptions(options);
+
+        CompilationUnit compilationUnit = (CompilationUnit) parser.createAST(null);
+        compilationUnit.recordModifications();
+
+        // Create a package + CU
+        return compilationUnit;
     }
 
     public OutputWriter getWriter() {
         return writer;
     }
+
 }
